@@ -174,6 +174,9 @@ correctly, but that messes up comparisons). --/
 /(*UTF16)\x{11234}/
   abcd\x{11234}pqr
 
+/(*UTF)\x{11234}/I
+  abcd\x{11234}pqr
+
 /(*UTF-32)\x{11234}/
   abcd\x{11234}pqr
 
